// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`affected: Возвращает корректный список измененных пакетов npm пакет Пакет используется в других местах – Возвращаем пакет и того, кто он него зависит: ui 1`] = `
Map {
  "@yandex/ui" => Object {
    "autobumpversion": undefined,
    "directCommits": Array [
      Object {
        "files": Array [
          "/packages/ui/package.json",
        ],
        "ignore": false,
        "message": "fix(ui): update prod deps",
        "sha": "shabranch",
      },
    ],
    "location": "/root/packages/ui",
    "mergeCommits": Array [
      Object {
        "directCommits": Array [
          Object {
            "files": Array [
              "/packages/ui/package.json",
            ],
            "ignore": false,
            "message": "build(ui): update pack",
            "sha": "pr1hash",
          },
        ],
        "merge": "Merge pull request #1 from fork/branch",
        "prTitle": "ISL-123: Обновили @bem-react/pack",
        "sha": "mergesha",
      },
    ],
    "name": "@yandex/ui",
    "private": false,
    "tag": "npm",
    "version": "1.0.0",
  },
}
`;

exports[`affected: Возвращает корректный список измененных пакетов npm пакет Пакет используется в других местах – Возвращаем пакет и того, кто он него зависит: ui deps 1`] = `
Array [
  Object {
    "autobumpversion": undefined,
    "directCommits": Array [
      Object {
        "files": Array [
          "/packages/ui/package.json",
        ],
        "ignore": false,
        "message": "fix(ui): update prod deps",
        "sha": "shabranch",
      },
    ],
    "location": "/root/packages/ui",
    "mergeCommits": Array [
      Object {
        "directCommits": Array [
          Object {
            "files": Array [
              "/packages/ui/package.json",
            ],
            "ignore": false,
            "message": "build(ui): update pack",
            "sha": "pr1hash",
          },
        ],
        "merge": "Merge pull request #1 from fork/branch",
        "prTitle": "ISL-123: Обновили @bem-react/pack",
        "sha": "mergesha",
      },
    ],
    "name": "@yandex/ui",
    "private": false,
    "tag": "npm",
    "version": "1.0.0",
  },
  Object {
    "autobumpversion": undefined,
    "dependencies": Object {
      "@yandex/ui": "1.0.0",
    },
    "depsAffected": true,
    "location": "/root/services/service",
    "name": "service",
    "private": true,
    "tag": "permanent",
    "version": "1.0.0",
  },
  Object {
    "autobumpversion": false,
    "dependencies": Object {
      "@yandex/ui": "1.0.0",
    },
    "depsAffected": true,
    "location": "/root/packages/emptydeps",
    "name": "empty",
    "private": false,
    "tag": "permanent",
    "version": "0.0.0",
  },
  Object {
    "autobumpversion": false,
    "dependencies": Object {
      "@yandex/ui": "1.0.0",
    },
    "depsAffected": true,
    "location": "/root/packages/dependant",
    "name": "empty",
    "private": false,
    "tag": "permanent",
    "version": "0.0.0",
  },
]
`;

exports[`affected: Возвращает корректный список измененных пакетов npm пакет Пакет нигде не используется – Возвращаем только он сам: empty deps 1`] = `
Map {
  "empty" => Object {
    "autobumpversion": undefined,
    "directCommits": Array [
      Object {
        "files": Array [
          "/packages/emptydeps/package.json",
        ],
        "ignore": false,
        "message": "fix(emptydeps): update prod deps",
        "sha": "shabranch",
      },
    ],
    "location": "/root/packages/emptydeps",
    "mergeCommits": Array [
      Object {
        "directCommits": Array [
          Object {
            "files": Array [
              "/packages/emptydeps/package.json",
            ],
            "ignore": false,
            "message": "chore(emptydeps): add owners",
            "sha": "pr1hash",
          },
        ],
        "merge": "Merge pull request #1 from fork/branch",
        "prTitle": "TRIVIAL – test",
        "sha": "mergesha",
      },
    ],
    "name": "empty",
    "private": false,
    "tag": "npm",
    "version": undefined,
  },
}
`;

exports[`affected: Возвращает корректный список измененных пакетов Приватный пакет Возвращает только один пакет --noPrivate : service noPrivate 1`] = `
Map {
  "service" => Object {
    "autobumpversion": undefined,
    "directCommits": Array [],
    "location": "/root/services/service",
    "mergeCommits": Array [],
    "name": "service",
    "private": true,
    "tag": "permanent",
    "version": "1.0.0",
  },
}
`;

exports[`affected: Возвращает корректный список измененных пакетов Приватный пакет Возвращает только один пакет: service 1`] = `
Map {
  "service" => Object {
    "autobumpversion": undefined,
    "directCommits": Array [
      Object {
        "files": Array [
          "/services/service/package.json",
        ],
        "ignore": false,
        "message": "fix(emptydeps): update prod deps",
        "sha": "shabranch",
      },
    ],
    "location": "/root/services/service",
    "mergeCommits": Array [
      Object {
        "directCommits": Array [
          Object {
            "files": Array [
              "/services/service/package.json",
            ],
            "ignore": false,
            "message": "chore(service): add owners",
            "sha": "pr1hash",
          },
        ],
        "merge": "Merge pull request #1 from fork/branch",
        "prTitle": "TRIVIAL – test",
        "sha": "mergesha",
      },
    ],
    "name": "service",
    "private": true,
    "tag": "permanent",
    "version": "1.0.0",
  },
}
`;
